# aakbar

./: .gitignore  .travis.yml  README.md  README.rst  requirements.txt  setup.cfg  setup.py
.github/: dependabot.yml
aakbar/: __init__.py  __main__.py  common.py  config.py  core.py  plot.py  search.py  simplicity.py  tests.py  version.py
aakbar/examples/: strep10.sh
aakbar/test/: calculate_signatures.sh  strep10.sh
aakbar/test/Streptococcus_infantis/: protein.faa
aakbar/test/Streptococcus_mutans/: protein.faa
aakbar/test/Streptococcus_pneumoniae/: protein.faa
aakbar/test/Streptococcus_porcinus/: genome-200-bp_reads-first2000.fna
docs/: Makefile  conf.py  index.rst  make.bat
examples/: README.txt  calculate_signatures.sh  find_plant_signatures.sh  firmicutes9.sh  split.sh  strep10.sh
