[metadata]
name = aakbar
url = http://github.com/ncgr/aakbar
author = Joel Berendzen
author_email = joelb@ncgr.org
maintainer = Joel Berendzen
maintainer_email = joelb@ncgr.org
long_description = file:README.rst
description-file =
    README.rst
    CHANGELOG.rst
keywords =
    science
    biology
    bioinformatics
    genomics
    statistics
    peptide
    signatures
    DNA
    protein
    sequence
    complexity
    simplicity
    alignment
    genes
    gene families
license = BSD 3-Clause License
license_file = LICENSE.txt
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
zip_safe = False
include_package_data = True
packages = aakbar
install_requires =
    biopython==1.73
    click>=5.0
    click_plugins==1.0.4
    coverage==4.5.2
    matplotlib==3.0.2
    numpy==1.15.4
    pandas==0.23.4
    pyfaidx==0.5.5.2
    pyyaml==3.13

[options.package_data]
* =
    *.txt
    *.rst
    *.faa
    *.sh
    *.conf
    *.cfg

[bdist-wheel]
universal = 0

[wheel]
universal = 0
