[metadata]
name = aakbar
url = http://github.com/ncgr/aakbar
author = Joel Berendzen
author_email = joelb@ncgr.org
maintainer = Joel Berendzen
maintainer_email = joelb@ncgr.org
long_description = file:README.rst
description-file =
    README.rst
    CHANGELOG.rst
keywords =
    science
    biology
    bioinformatics
    genomics
    statistics
    peptide
    signatures
    DNA
    protein
    sequence
    complexity
    simplicity
    alignment
    genes
    gene families
license = BSD 3-Clause License
license_file = LICENSE.txt
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
zip_safe = False
include_package_data = True
packages = aakbar
install_requires =
    biopython==1.76
    click>=5.0
    click_plugins==1.1.1
    colorama==0.4.3
    coverage==5.0.4
    matplotlib==3.2.1
    numpy==1.18.2
    pandas==1.0.3
    path.py==12.4.0
    pyfaidx==0.5.8
    pyfastaq==3.17.0
    pytest==5.4.1
    pytest-shutil==1.7.0
    pyyaml==5.3.1
    seaborn==0.10.0

[options.package_data]
* =
    *.txt
    *.rst
    *.faa
    *.sh
    *.conf
    *.cfg

[bdist-wheel]
universal = 0

[wheel]
universal = 0
